--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </tr>
         <tr>
             <td>Task 6</td>
-            <td><a href="https://github.com/Soumy-Sinha/Agecal">task 6</a></td>
-            <td><a href="https://agecal-lovat.vercel.app/">task 6</a></td>
+            <td><a href="https://github.com/Soumy-Sinha/simplePortfolio">task 6</a></td>
+            <td><a href="https://simple-portfolio-fawn.vercel.app/home">task 6</a></td>
         </tr>
         
     </table>
